TEST_PROGRAMS/INVALID/alexandre_st-louis_fortier/005-while-no-expression.min

while do
  print 1;
done

